Adding Skeleton css, lightweight boilerplate css

--- a/public/board.html
+++ b/public/board.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html ng-app='whiteboard'>
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" media="screen" title="no title" charset="utf-8">
   <link rel="stylesheet" href="css/bootstrap-button.css">
-    <link rel='stylesheet' href='css/boardstyle.css'>
+    <!-- <link rel='stylesheet' href='css/boardstyle.css'> -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
@@ -50,10 +51,10 @@
             <label for="blue"></label>
           </div>
         </div>
-        
+
         <!-- <button class='btn-tool btn-undo'>Undo</button> -->
       </div>
-    
+
   </div>
 </body>
 <!-- <script src="lib/jquery/dist/jquery.min.js"></script> -->
