--- a/public/board.html
+++ b/public/board.html
@@ -43,9 +43,14 @@
 
         <canvas id='whiteboard' ng-controller='canvas'>
         </canvas>
+
       </div>
     </div>
 
+      <div class='toolbar' ng-controller='toolbar'>
+        <div class='btn-erase' ng-click="changePen('eraser')">
+          <img id="eraser" src="images/pinkeraser.png">
+        </div>
 
     <div class="fixed-action-btn vertical" style="bottom: 45px; right: 24px;">
        <a class="btn-floating btn-large red">
@@ -58,8 +63,6 @@
          <li><a class="btn-floating green"><i class="fa fa-pencil"></i></a></li>
        </ul>
      </div>
-
-
 
     <!-- <div class='toolbar' ng-controller='toolbar as vm'>
       <div class='btn-erase' ng-click="vm.changePen('eraser')">
@@ -83,7 +86,6 @@
     </div> -->
     </div>
   </body>
-
 
 
 <script src="http://simplewebrtc.com/latest.js"></script>
