--- a/public/board.html
+++ b/public/board.html
@@ -31,22 +31,22 @@
         </canvas>
       </div>
     </div>
-      <div class='toolbar' ng-controller='toolbar'>
-        <div class='btn-erase' ng-click="changePen('eraser')">
+      <div class='toolbar' ng-controller='toolbar as vm'>
+        <div class='btn-erase' ng-click="vm.changePen('eraser')">
           <img src="images/pinkeraser.png">
         </div>
 
         <div class='pens'>
           <div class='palette'>
-            <input type="checkbox" value="None" id="black" name="check" checked="checked" ng-click="changePen('black')"/>
+            <input type="checkbox" value="None" id="black" name="check" checked="checked" ng-click="vm.changePen('black')"/>
             <label for="black"></label>
           </div>
           <div class='palette'>
-            <input type="checkbox" value="None" id="red" name="check" ng-click="changePen('red')"/>
+            <input type="checkbox" value="None" id="red" name="check" ng-click="vm.changePen('red')"/>
             <label for="red"></label>
           </div>
           <div class='palette'>
-            <input type="checkbox" value="None" id="blue" name="check" ng-click="changePen('blue')"/>
+            <input type="checkbox" value="None" id="blue" name="check" ng-click="vm.changePen('blue')"/>
             <label for="blue"></label>
           </div>
         </div>
