--- a/public/board.html
+++ b/public/board.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html ng-app='whiteboard'>
   <head>
-    <link rel="stylesheet" href="css/bootstrap-button.css">
-    <link rel='stylesheet' href='css/boardstyle.css'>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css'>
+    <!-- styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head>
   <body>
     <h1>Codeboard</h1>
@@ -26,7 +24,23 @@
         </canvas>
       </div>
     </div>
-    <div class='toolbar' ng-controller='toolbar as vm'>
+
+
+    <div class="fixed-action-btn vertical click-to-toggle" style="bottom: 45px; right: 24px;">
+       <a class="btn-floating btn-large red">
+         <i class="large mdi-navigation-menu"></i>
+       </a>
+       <ul>
+         <li><a class="btn-floating grey lighten-2"><i class="fa fa-eraser" style="color: #555"></i></a></li>
+         <li><a class="btn-floating amber darken-4"><i class="fa fa-pencil"></i></a></li>
+         <li><a class="btn-floating indigo darken-3"><i class="fa fa-pencil"></i></a></li>
+         <li><a class="btn-floating green"><i class="fa fa-pencil"></i></a></li>
+       </ul>
+     </div>
+
+
+
+    <!-- <div class='toolbar' ng-controller='toolbar as vm'>
       <div class='btn-erase' ng-click="vm.changePen('eraser')">
         <img src="images/pinkeraser.png">
       </div>
@@ -45,7 +59,7 @@
           <label for="blue"></label>
         </div>
       </div>
-    </div>
+    </div> -->
     </div>
   </body>
 
@@ -56,6 +70,10 @@
 <script src="lib/jquery.event.drag-2.2.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+<!-- scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
 <script src="js/app.js"></script>
 <script src='js/whiteboard.js'></script>
 <script src="js/initialize.js"></script>
