--- a/public/board.html
+++ b/public/board.html
@@ -5,16 +5,37 @@
     <!-- styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   </head>
   <body>
-    <h1>Codeboard</h1>
-    <div ng-controller='switchBoardsController as vm'>
+    <nav>
+      <div class="nav-wrapper grey lighten-1">
+        <a href="#!" class="brand-logo">CodeBoard</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="sass.html"><i class="material-icons">mic</i></a></li>
+          <li><a href="sass.html"><i class="material-icons">videocam</i></a></li>
+          <li><a href="sass.html"><i class="material-icons">settings</i></a></li>
+          <!-- <li><a href="sass.html"><i class="material-icons">videocam_off</i></a></li> -->
+          <!-- <li><a href="sass.html"><i class="material-icons">mic_off</i></a></li> -->
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="sass.html">Turn Mic Off</a></li>
+          <li><a href="sass.html">Turn Webcam Off</a></li>
+          <li><a href="sass.html">Other Settings</a></li>
+          <!-- <li><a href="sass.html"><i class="material-icons">videocam_off</i></a></li> -->
+          <!-- <li><a href="sass.html"><i class="material-icons">mic_off</i></a></li> -->
+        </ul>
+      </div>
+    </nav>
+    <!-- <div ng-controller='switchBoardsController as vm'>
       <form ng-submit='vm.switchBoards()'>
         <input type='text' placeholder='Go to existing board' ng-model='vm.boardId'/>
         <button type="submit">Go</button>
       </form>
     </div>
-    <button class="pure-button new"><a href="/new">New Board</a></button>
+    <button class="pure-button new"><a href="/new">New Board</a></button> -->
     <div class='whiteboard container'>
 
       <!-- render this in ng-view probably -->
@@ -26,9 +47,9 @@
     </div>
 
 
-    <div class="fixed-action-btn vertical click-to-toggle" style="bottom: 45px; right: 24px;">
+    <div class="fixed-action-btn vertical" style="bottom: 45px; right: 24px;">
        <a class="btn-floating btn-large red">
-         <i class="large mdi-navigation-menu"></i>
+         <i class="fa fa-arrow-up"></i>
        </a>
        <ul>
          <li><a class="btn-floating grey lighten-2"><i class="fa fa-eraser" style="color: #555"></i></a></li>
