--- a/public/board.html
+++ b/public/board.html
@@ -4,16 +4,19 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper grey lighten-1">
+      <div class="nav-wrapper slate">
         <a href="#!" class="brand-logo">CodeBoard</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
+          
+          <li><a href="sass.html"><i class="fa fa-plus-circle"></i></a></li>
           <li><a href="sass.html"><i class="material-icons">mic</i></a></li>
           <li><a href="sass.html"><i class="material-icons">videocam</i></a></li>
           <li><a href="sass.html"><i class="material-icons">settings</i></a></li>
@@ -29,14 +32,14 @@
         </ul>
       </div>
     </nav>
-    <!-- <div ng-controller='switchBoardsController as vm'>
+    <div ng-controller='switchBoardsController as vm'>
       <form ng-submit='vm.switchBoards()'>
         <input type='text' placeholder='Go to existing board' ng-model='vm.boardId'/>
         <button type="submit">Go</button>
       </form>
     </div>
-    <button class="pure-button new"><a href="/new">New Board</a></button> -->
-    <div class='whiteboard container'>
+    <button class="pure-button new"><a href="/new">New Board</a></button>
+    <div class='whiteboard'>
 
       <!-- render this in ng-view probably -->
       <div class='board-frame'>
@@ -47,12 +50,7 @@
       </div>
     </div>
 
-      <div class='toolbar' ng-controller='toolbar'>
-        <div class='btn-erase' ng-click="changePen('eraser')">
-          <img id="eraser" src="images/pinkeraser.png">
-        </div>
-
-    <div class="fixed-action-btn vertical" style="bottom: 45px; right: 24px;">
+    <div class="fixed-action-btn vertical" style="bottom: 20px; right: 24px;">
        <a class="btn-floating btn-large red">
          <i class="fa fa-arrow-up"></i>
        </a>
@@ -64,7 +62,7 @@
        </ul>
      </div>
 
-    <!-- <div class='toolbar' ng-controller='toolbar as vm'>
+    <div class='toolbar' ng-controller='toolbar as vm'>
       <div class='btn-erase' ng-click="vm.changePen('eraser')">
         <img src="images/pinkeraser.png">
       </div>
@@ -83,7 +81,7 @@
           <label for="blue"></label>
         </div>
       </div>
-    </div> -->
+    </div>
     </div>
   </body>
 
