--- a/public/board.html
+++ b/public/board.html
@@ -23,7 +23,7 @@
           <!-- <li><a href="sass.html"><i class="material-icons">mic_off</i></a></li> -->
         </ul>
         <ul class="side-nav" id="mobile-demo">
-          <li><a href="sass.html">Join Board</a></li>
+          <li><a href="/new">Join Board</a></li>
           <li><a href="sass.html">Turn Mic Off</a></li>
           <li><a href="sass.html">Turn Webcam Off</a></li>
           <li><a href="sass.html">Other Settings</a></li>
@@ -55,7 +55,7 @@
        </a>
        <ul>
          <li ng-click="vm.changePen('eraser')"><a class="btn-floating grey lighten-2"><i class="fa fa-eraser" style="color: #555"></i></a></li>
-         <li ng-click="vm.changePen('#ff6f00')"><a class="btn-floating amber darken-2"><i class="fa fa-pencil"></i></a></li>
+         <li ng-click="vm.changePen('orange')"><a class="btn-floating amber darken-2"><i class="fa fa-pencil"></i></a></li>
          <li ng-click="vm.changePen('navy')"><a class="btn-floating indigo darken-3"><i class="fa fa-pencil"></i></a></li>
          <li ng-click="vm.changePen('green')"><a class="btn-floating green darken-3"><i class="fa fa-pencil"></i></a></li>
        </ul>
