Changing file directories for angular

--- a/public/board.html
+++ b/public/board.html
@@ -43,7 +43,7 @@
       <!-- render this in ng-view probably -->
       <div class='board-frame'>
 
-        <canvas id='whiteboard' ng-controller='canvas'>
+        <canvas width="500" height="300" id="canvas" drawing>
         </canvas>
 
       </div>
