--- a/public/board.html
+++ b/public/board.html
@@ -43,7 +43,7 @@
       <!-- render this in ng-view probably -->
       <div class='board-frame'>
 
-        <canvas width="500" height="300" id="canvas" drawing>
+        <canvas id="whiteboard" ng-controller="canvas">
         </canvas>
 
       </div>
@@ -75,7 +75,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-<script src="js/app.js"></script>
-<script src='js/whiteboard.js'></script>
-<script src="js/initialize.js"></script>
+<script src="app/app.js"></script>
+<script src='app/whiteboard.js'></script>
+<script src="app/initialize.js"></script>
 </html>
