--- a/public/board.html
+++ b/public/board.html
@@ -100,7 +100,8 @@
 <script src="https://cdn.firebase.com/libs/firepad/1.2.0/firepad.min.js"></script>
 
 <script>
-  var firepadRef = new Firebase('burning-inferno-4771.firebaseIO.com');
+  // console.log('https://burning-inferno-4771.firebaseIO.com/firepads/' + window.location.pathname.slice(1));
+  var firepadRef = new Firebase('https://burning-inferno-4771.firebaseIO.com/firepads/' + window.location.pathname.slice(1));
   var codeMirror = CodeMirror(document.getElementById('firepad'), {
     lineNumbers: true,
     mode: 'javascript'
