Sorting out conflicts

--- a/public/board.html
+++ b/public/board.html
@@ -38,7 +38,7 @@
     <!-- Modal Structure for sign in button-->
     <div id="modal2" class="modal" ng-controller='auth as vm'>
       <form class="modal-content">
-        File Name:<input type='text' ng-model="vm.fileName" placeholder='joeBlogs@gmail.com'/>
+        File Name:<input type='text' ng-model="vm.fileName" placeholder='codeBoard name'/>
       </form>
       <div class="modal-footer">
         <a class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="vm.saveFile();">Save</a>
@@ -75,7 +75,6 @@
                 <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="fa fa-folder-open-o"></i></a></li>
                 <!-- Modal Trigger -->
                 <li><a class="modal-trigger" href="#modal2"><i class="fa fa-floppy-o"></i></a></li>
-                <li><a href="#"><i class="fa fa-power-off"></i></a></li>
                 <li><a class="dropdown-button" href="#" data-activates="dropdown2">Login/Out</i></a></li>
                 
         </ul>
