Making sure all working before pulling from upstream

--- a/public/board.html
+++ b/public/board.html
@@ -49,7 +49,8 @@
     <ul id="dropdown1" class="dropdown-content" ng-controller="auth as vm">
       <li ng-repeat="canvas in vm.canvases"><a href="#!">{{canvas}}</a></li>
       <li class="divider"></li>
-      <!-- stuff that was here before not necessary really -->
+      <!-- stuff that was here before not necessary reallynodemon
+       -->
       <li><a href="#!">two</a></li>
       <li class="divider"></li>
       <li><a href="#!">three</a></li>
