Adding comments for what needs to be disabled when

--- a/public/board.html
+++ b/public/board.html
@@ -78,9 +78,9 @@
                 <li><a href="/new"><i class="material-icons">note_add</i></a></li>
                 <!-- dropdown of all the files that are available to the user -->
                 <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="fa fa-folder-open-o"></i></a></li>
-                <!-- Modal Trigger for the pop out to save a canvas and make it-->
+                <!-- Modal Trigger for the pop out to save a canvas and make it TO BE DISABLED UNTIL SIGNED IN-->
                 <li><a class="modal-trigger" href="#modal2"><i class="fa fa-floppy-o"></i></a></li>
-                <!-- dropDown to login/logout/signup -->
+                <!-- dropDown to login/logout/signup DISABLE LOGOUT WHEN LOGED OUT AND LOGIN WHEN LOGGEDIN-->
                 <li><a class="dropdown-button" href="#" data-activates="dropdown2">Login/Out</i></a></li>
                 
          <!--  <li><a href="sass.html"><i class="material-icons">mic</i></a></li>
