--- a/public/board.html
+++ b/public/board.html
@@ -75,7 +75,7 @@
                 <!-- button to get a new canvas -->
                 <li><a href="/new"><i class="material-icons">note_add</i></a></li>
                 <!-- dropdown of all the files that are available to the user -->
-                <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="fa fa-folder-open-o"></i></a></li>
+                <li ng-controller="auth as vm"><a class="dropdown-button" href="#" data-activates="dropdown1" ng-click="vm.getFiles();"><i class="fa fa-folder-open-o"></i></a></li>
                 <!-- Modal Trigger for the pop out to save a canvas and make it TO BE DISABLED UNTIL SIGNED IN-->
                 <li><a class="modal-trigger" href="#modal2"><i class="fa fa-floppy-o"></i></a></li>
                 <!-- dropDown to login/logout/signup DISABLE LOGOUT WHEN LOGED OUT AND LOGIN WHEN LOGGEDIN-->
