--- a/public/board.html
+++ b/public/board.html
@@ -45,13 +45,10 @@
 
     <!-- details for drop down where to save files NOT GETTING THE NEW CALLS TO THE FUNCTION?? -->
     <ul id="dropdown1" class="dropdown-content" ng-controller="auth as vm">
-      <li ng-repeat="canvas in vm.canvases"><a href="#!">{{canvas}}</a></li>
+      <li ng-repeat="canvas in vm.canvases"><a href="#!">{{canvas[0]}}</a></li>
       <li class="divider"></li>
       <!-- stuff that was here before not necessary reallynodemon
        -->
-      <li><a href="#!">two</a></li>
-      <li class="divider"></li>
-      <li><a href="#!">three</a></li>
     </ul>
 
     <!-- details for drop down authentication -->
