--- a/public/board.html
+++ b/public/board.html
@@ -128,15 +128,15 @@
 
     <!-- FAB pen toolbar: start -->
     <div class="fixed-action-btn vertical toolbar" ng-controller='toolbar as vm' style="bottom: 20px; right: 24px;">
-      <a class="btn-floating btn-large red"><i class="fa fa-arrow-up"></i></a>
+      <a class="btn-floating btn-medium red"><i class="fa fa-arrow-up"></i></a>
         <ul>
           <!-- items in toolbar -->
-          <li ng-click="vm.removeLast()"><a class="btn-floating grey lighten-2"><i class="fa fa-eraser" style="color: #555"></i></a></li>
+          <li ng-click="vm.removeLast()"><a class="btn-floating grey lighten-2"><i class="fa fa-undo" style="color:grey"></i></a></li>
           <li ng-click="vm.changePen('eraser')"><a class="btn-floating grey lighten-2"><i class="fa fa-eraser" style="color: #555"></i></a></li>
           <li ng-click="vm.changePen('#ff6f00')"><a class="btn-floating amber darken-2"><i class="fa fa-pencil"></i></a></li>
           <li ng-click="vm.changePen('navy')"><a class="btn-floating indigo darken-3"><i class="fa fa-pencil"></i></a></li>
           <li ng-click="vm.changePen('green')"><a class="btn-floating green darken-3"><i class="fa fa-pencil"></i></a></li>
-          <li ng-click="vm.drawSquare()"><a class="btn-floating black darken-3"><i class="fa fa-pencil"></i></a></li>
+          <li ng-click="vm.drawSquare()"><a class="btn-floating black darken-3"><i class="fa fa-pencil-square-o"></i></a></li>
         </ul>
     </div>
     <!-- FAB pen toolbar: end -->
